# unifi-protect-archive

./: .gitignore  Cargo.toml  LICENSE.md  README.md  protect-archive.example.toml  sonar-project.properties
.github/workflows/: build.yml  sonarcloud.yml
scripts/: coverage.sh
src/: archiver.rs  config.rs  main.rs  protect.rs
